--- a/public/500.html
+++ b/public/500.html
@@ -51,11 +51,23 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
-  </style>
+.error {
+  padding-top: 16%
+}
+p{
+  text-align: center;
+}
+img{
+  display: block;
+  margin: 0 auto;
+}
+</style>
 </head>
 
 <body class="rails-default-error-page">
   <!-- This file lives in public/500.html -->
+  <div class="error">
+  <img src="/404.png">
   <div class="dialog">
     <div>
       <h1>We're sorry, but something went wrong.</h1>
